Add Personal Finance & Debt Freedom Plan service
Updated services section to include a new service for Personal Finance & Debt Freedom Plan.

--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
         <h3>📈 Investment Planning</h3>
         <p>Tailored strategies to help you grow and protect your wealth.</p>
       </div>
+       <div class="service">
+        <h3>💼 Personal Finance & Debt Freedom Plan</h3>
+        <p>Get clear control of your money and a step-by-step plan to eliminate debt.</p>
+      </div>
       <div class="service">
         <h3>💼 Retirement & Estate Planning</h3>
         <p>Build a legacy and secure your future with confidence.</p>
@@ -308,6 +312,7 @@
 
 </body>
 </html>
+
 
 
 
